# hermes-omnivoice-tts

./: README.md  SBOM.json  pyproject.toml
skills/omnivoice-tts/: SKILL.md
src/hermes_omnivoice_tts/: __init__.py  config.py  plugin.py
src/omnivoice_tts/: __init__.py  client.py  config.py  plugin.py  pyproject.toml
tests/: test_smoke.py
